--- a/uniudtesi.sty
+++ b/uniudtesi.sty
@@ -15,10 +15,10 @@
 pdfpagemode=UseOutlines,
 bookmarksopen,
 bookmarksopenlevel=2,
-pdftitle=Tesi di Laurea,
-pdfauthor=Tesista,
-pdfsubject=Tesi di Laurea,
-pdfkeywords=tesi laurea LaTeX}
+pdftitle=Readersourcing 2.0 - Technical Documentation,
+pdfauthor=Michael Soprano,
+pdfsubject=Readersourcing 2.0 - Technical Documentation,
+pdfkeywords=crowdsourcing peer-review scholarly-publishing}
 
 \newcommand{\@facolta}{?}
 \newcommand{\@dipartimento}{Matematica e Informatica}
