--- a/bibliography.bib
+++ b/bibliography.bib
@@ -66,4 +66,11 @@ abstract = {Abstract The Internet has fostered a faster, more interactive and ef
   url          = {https://doi.org/10.5281/zenodo.1442599}
 }
 
+@misc{RS-Py,
+  author       = {Soprano, Michael and Mizzaro, Stefano},
+  title        = {{Readersourcing 2.0: RS\_Py}},
+  doi          = {10.5281/zenodo.3245208},
+  url          = {https://doi.org/10.5281/zenodo.3245208}
+}
+
 @article{Soprano2019,title = {Crowdsourcing Peer Review: As We May Do},journal = {Communications in Computer and Information Science},year = {2019},volume = {988},pages = {259-273},author = {Soprano, M. and Mizzaro, S.}} 
